# CMake_Template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Readme.md
source/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp
